# ros2-mini-project

src/: test.p.py
src/making_delivery/: CMakeLists.txt  package.xml
src/making_delivery/launch/: make_delivery.py
src/making_delivery/models/deliverer/: model.config  model.sdf
src/making_delivery/robots/: deliverer.sdf  deliverer_1.sdf  deliverer_2.sdf
src/making_delivery/rviz/: config.rviz
src/making_delivery/src/: left_front_wheel.cpp  left_wheels.cpp  lid.cpp
src/making_delivery/worlds/: delivery_world.sdf  empty_world.world
